syntax = "proto3";

package proton_pass_item_v1;

// Item types

message ItemNote {
}

message ItemLogin {
	string username = 1;
	string password = 2;
	repeated string urls = 3;
	string totp_uri = 4;
}

message ItemAlias {
}

// Client extras
message AllowedAndroidApp {
	string package_name = 1;
	repeated string hashes = 2;
	string app_name = 3;
}

message AndroidSpecific {
	repeated AllowedAndroidApp allowed_apps = 1;
}

message PlatformSpecific {
	AndroidSpecific android = 1;
}

// Item

message ExtraTotp {
	string totp_uri = 1;
}

message ExtraField {
	string field_name = 1;
	oneof content {
		ExtraTotp totp = 2;
	}
}

message Metadata {
	string name = 1;
	string note = 2;
	string item_uuid = 3;
}

message Content {
	oneof content {
		ItemNote note = 2;
		ItemLogin login = 3;
		ItemAlias alias = 4;
	}
}

message Item {
	Metadata metadata = 1;
	Content content = 2;
	PlatformSpecific platform_specific = 3;
	repeated ExtraField extra_fields = 4;
}
